Controllers, JSP and Selenium Tests are done